--- a/src/scss/actor/parts/general.scss
+++ b/src/scss/actor/parts/general.scss
@@ -104,7 +104,7 @@
 
             background-color: $red;
 
-            animation: experience-bar 300ms ease-in-out;
+            // animation: experience-bar 300ms ease-in-out;
           }
         }
 
