--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -5,11 +5,15 @@
 $red: #6e2917;
 $dark-cream: #dcd7b7;
 $light-cream: #e7e5da;
+$light-cream-transparent: #e7e3dad5;
+
 $intensified-red: #ff0000;
 $black: #000000;
 $white: #ffffff;
 $grey: #808080;
 $light-gray: #9f9c87;
+$transparent-black: rgba(0, 0, 0, 0.5);
+$dark-grey: #252525;
 
 $border-radius: 10px;
 
