--- a/src/templates/actor/parts/settings/parts/advancedSettings.hbs
+++ b/src/templates/actor/parts/settings/parts/advancedSettings.hbs
@@ -28,7 +28,44 @@
       inputName="system.general.settings.fumbles.value"
       inputValue= system.general.settings.fumbles.value
     }}
-
+    
+    {{#if canModifyDice}}
+      {{> "systems/abf/templates/common/ui/horizontal-titled-input.hbs"
+        class="die"
+        inputType="text"
+        title=(localize "anima.ui.settings.advancedSettings.characteristicDie.title")
+        inputName="system.general.diceSettings.characteristicDie.value"
+        inputValue= system.general.diceSettings.characteristicDie.value
+      }}
+      {{> "systems/abf/templates/common/ui/horizontal-titled-input.hbs"
+        class="die"
+        inputType="text"
+        title=(localize "anima.ui.settings.advancedSettings.initiativeDie.title")
+        inputName="system.general.diceSettings.initiativeDie.value"
+        inputValue= system.general.diceSettings.initiativeDie.value
+      }}
+      {{> "systems/abf/templates/common/ui/horizontal-titled-input.hbs"
+        class="die"
+        inputType="text"
+        title=(localize "anima.ui.settings.advancedSettings.resistanceDie.title")
+        inputName="system.general.diceSettings.resistanceDie.value"
+        inputValue= system.general.diceSettings.resistanceDie.value
+      }}
+      {{> "systems/abf/templates/common/ui/horizontal-titled-input.hbs"
+        class="die"
+        inputType="text"
+        title=(localize "anima.ui.settings.advancedSettings.abilityDie.title")
+        inputName="system.general.diceSettings.abilityDie.value"
+        inputValue= system.general.diceSettings.abilityDie.value
+      }}
+      {{> "systems/abf/templates/common/ui/horizontal-titled-input.hbs"
+        class="die"
+        inputType="text"
+        title=(localize "anima.ui.settings.advancedSettings.abilityMasteryDie.title")
+        inputName="system.general.diceSettings.abilityMasteryDie.value"
+        inputValue= system.general.diceSettings.abilityMasteryDie.value
+      }}
+    {{/if}}
     <div>
       {{#> 'systems/abf/templates/common/ui/custom-select.hbs'
         class="defenseType"
