--- a/src/templates/actor/parts/settings/settings.hbs
+++ b/src/templates/actor/parts/settings/settings.hbs
@@ -1,8 +1,14 @@
 <div class='settings'>
   <section class='settings-body'> 
-    {{> "systems/abf/templates/actor/parts/settings/parts/tabVisibility.hbs"}}
-    {{> "systems/abf/templates/actor/parts/settings/parts/advancedSettings.hbs"}}
-    {{> "systems/abf/templates/actor/parts/settings/parts/advancedCharacteristics.hbs"}}
-    {{> "systems/abf/templates/actor/parts/settings/parts/automationOptions.hbs"}}
+    <div>
+      {{> "systems/abf/templates/actor/parts/settings/parts/tabVisibility.hbs"}}
+      {{> "systems/abf/templates/actor/parts/settings/parts/automationOptions.hbs"}}
+    </div>
+    <div>
+      {{> "systems/abf/templates/actor/parts/settings/parts/advancedSettings.hbs"}}
+    </div>
+    <div>
+      {{> "systems/abf/templates/actor/parts/settings/parts/advancedCharacteristics.hbs"}}
+    </div>
   </section> 
 </div>
