--- a/src/templates/common/ui/vertical-titled-input.hbs
+++ b/src/templates/common/ui/vertical-titled-input.hbs
@@ -1,5 +1,5 @@
 {{>
-"systems/abf/templates/common/ui/horizontal-titled-input.hbs"
+  "systems/abf/templates/common/ui/horizontal-titled-input.hbs"
   class=(concat this.class " " "vertical")
   hideTitle=this.hideTitle
   disabled=this.disabled
@@ -7,10 +7,19 @@
   rollable=this.rollable
   rollableDice=this.rollableDice
   rollableMessage=this.rollableMessage
+
   inputName=this.inputName
   inputValue=this.inputValue
+
   hasSecondaryInput=this.hasSecondaryInput
   disableSecondaryInput=this.disableSecondaryInput
   secondaryInputName=this.secondaryInputName
   secondaryInputValue=this.secondaryInputValue
+
+  hasTertiaryInput=this.hasTertiaryInput
+  disableTertiaryInput=this.disableTertiaryInput
+  tertiaryInputName=this.tertiaryInputName
+  tertiaryInputValue=this.tertiaryInputValue
+
+  addTooltips=this.addTooltips
 }}
