--- a/src/templates/actor/parts/general/parts/level.hbs
+++ b/src/templates/actor/parts/general/parts/level.hbs
@@ -13,7 +13,7 @@
     "systems/abf/templates/common/ui/group-header-title.hbs"
       title=(localize 'anima.ui.levelSection.title')
     }}
-    <input type='number' class='input' value='{{calculateLevels system.general.levels}}' disabled='true'/>
+    <input type='number' class='input' value='{{system.general.level.value}}' disabled='true'/>
   {{/"systems/abf/templates/common/ui/group-header.hbs"}}
   {{#> "systems/abf/templates/common/ui/group-body.hbs"
     class="level"
