--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -7,6 +7,7 @@
 @import 'actor/actor-sheet.scss';
 @import 'items/items-sheet.scss';
 @import 'chat/combat-result-message.scss';
+@import 'chat/attack-data-message.scss';
 @import 'custom-hotbar/custom-hotbar.scss';
 
 @import 'dialog/gm-combat-dialog.scss';
