--- a/src/templates/actor/parts/mystic/parts/spells/grade/grade.hbs
+++ b/src/templates/actor/parts/mystic/parts/spells/grade/grade.hbs
@@ -34,4 +34,7 @@
     inputName=this.descriptionInputName
     inputValue=this.grade.description.value
   }}
+  {{!-- <button class='attack-button' data-on-click="createWeaponAttack" data-weapon-id="{{weapon._id}}">
+    {{localize "anima.ui.combat.weapons.attackButton.title"}}
+  </button> --}}
 </div>
