ADD - Dice permission config panel translations

--- a/src/templates/dialog/config/modify-dice-formulas.hbs
+++ b/src/templates/dialog/config/modify-dice-formulas.hbs
@@ -1,6 +1,6 @@
 <form autocomplete="off">
   <div class="form-group">
-    <label>{{localize "anima.permissions.modifyDiceFormulasPermission.label"}}</label>
+    <label>{{localize "anima.permissions.modifyDiceFormulasPermission.title"}}</label>
     <p class="notes">{{localize "anima.permissions.modifyDiceFormulasPermission.hint"}}</p>
   </div>
 
