--- a/src/templates/actor/parts/mystic/parts/selected-spells.hbs
+++ b/src/templates/actor/parts/mystic/parts/selected-spells.hbs
@@ -3,32 +3,39 @@
 }}
   {{>
   "systems/animabf/templates/common/ui/group-header.hbs"
-    title=(localize "anima.ui.mystic.selectedSpells.title")
+    title=(localize "anima.ui.mystic.maintainedSpells.title")
     addRowButtonData="add-selected-spell"
   }}
   {{#> "systems/animabf/templates/common/ui/group-body.hbs"
     class="selected-spells"
   }}
     {{#each system.mystic.selectedSpells as |spell|}}
-      <div data-item-id='{{this._id}}' class='selected-spell-row'>
+      <div data-item-id='{{this._id}}' class='selected-spell-row maintained-spell-item'>
         {{>
         "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
           class="name"
-          title=(localize "anima.ui.mystic.selectedSpells.name.title")
+          title=(localize "anima.ui.mystic.maintainedSpells.name.title")
           hideTitle=(is "gt" @index 0)
+          disabled=true
           inputType="text"
-          inputName=(concat "system.dynamic.selectedSpells." this._id ".name")
-          inputValue=this.name
+          inputName=""
+          inputValue=(concat this.name " - " (localize (concat 'dialogs.spellGrade.' this.system.grade.value '.title')))
         }}
         {{>
         "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
           class="cost"
-          title=(localize "anima.ui.mystic.selectedSpells.cost.title")
+          title=(localize "anima.ui.mystic.maintainedSpells.cost.title")
           hideTitle=(is "gt" @index 0)
-          inputName=(concat "system.dynamic.selectedSpells." this._id ".system.cost.value")
+          disabled=true
+          inputName=""
           inputValue=this.system.cost.value
         }}
       </div>
     {{/each}}
+    {{#if system.mystic.selectedSpells}}
+      <div class="maintenance-total">
+        <strong>{{localize "anima.ui.mystic.maintainedSpells.totalPerTurn.title"}}</strong> <span class="total-cost">{{system.mystic.zeonMaintained.value}}</span> Zeon
+      </div>
+    {{/if}}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
