--- a/src/templates/actor/parts/effects/effects.hbs
+++ b/src/templates/actor/parts/effects/effects.hbs
@@ -1,3 +1,5 @@
 <div class='effects'>
-  {{> "systems/animabf/templates/actor/parts/effects/parts/effects-list.hbs"}}
+  <div class="first-column">
+         {{> "systems/animabf/templates/actor/parts/effects/parts/effects-list.hbs"}}
+    </div>
 </div>
